--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,7 @@ nav .menu{
     /* right: 0; */
     left: -10%;
     /*bottom: -170px;*/
-    bottom: -55px;
+    bottom: -70px;
     box-shadow: 0px -7px 10px -6px rgba(0,0,0,0.65);
   }
   .menu-btn{
@@ -1023,7 +1023,7 @@ nav .menu{
   left: calc(50% - 450px);
 }
 .teachers h2{
-  margin-top: 20px;
+  margin-top: 40px;
 }
 .teachers .container{
   z-index: 10;
@@ -1196,6 +1196,7 @@ nav .menu{
 }
 .our-students h2{
   color: white;
+  margin-top: 30px;
 }
 .our-students .container{
   padding-top: 25px;
@@ -1314,9 +1315,7 @@ nav .menu{
 /*========== TRANSPORT SECTION =========*/
 .transport{
   position: fixed;
-  display: flex;
-  justify-content: center;
-  align-content: center;
+  
   width: 100%;
   height: 40px;
   top: 0;
@@ -1324,9 +1323,13 @@ nav .menu{
   /*background-color: #9d1c20;*/
   background-color: white;
   z-index: 1000;
+  box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.55);
 }
 .transport .container{
-  margin-top: 0;
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .transport p{
   margin:0;
@@ -1343,18 +1346,38 @@ nav .menu{
   padding-bottom: 5px;
   font-weight: bold;
   margin-left: 5px;
-  align-self: center;
 }
 .transport img{
-  height: 40px;
+  height: 30px;
   margin-left: 15px;
 }
-
 @media screen and (max-width: 640px) { 
   .transport{
-    display: none;
+    overflow: hidden;
+    height: 30px;
   }
-
+  .transport .container{
+    margin-top: 3px;
+  }
+  .transport .metrostation,
+  .transport .metro,
+  .trall,
+  .tralleibus,
+  .bus,
+  .busbus{
+    font-size: 0.55rem;
+    margin-left: 2px;
+    line-height: 0.9rem;
+  }
+  .transport img{
+    height: 25px;
+    margin-left: 5px;
+  }
+  .transport .container{
+    width: 100%;
+  }
+  
+}
 
 
 /*-----------SVG-ANIMATION------------*/
