--- a/css/style-gallery.css
+++ b/css/style-gallery.css
@@ -1,7 +1,8 @@
 #rg-gallery{
 	position: absolute;
+	top: 120px;
 	z-index: 55;
-	width: 1200px;
+	width: 800px;
 }
 @media screen and (max-width: 1400px) { 
 	#rg-gallery{
