--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,8 @@ svg {
 
 .header{
   height: 100vh;
-  background-image: url(../images/work-space.jpg);
+  /*background-image: url(../images/work-space.jpg);*/
+  background-image: url(../images/work-space-dark.jpg);
   background-size: 110%;
   background-position: bottom;
   text-align: center;
@@ -105,7 +106,7 @@ svg {
 
 @media screen and (max-width: 640px) { 
   .header{
-    background-image: url(../images/work-space-mob.jpg);
+    background-image: url(../images/work-space-mob-dark.jpg);
     background-size: cover;
     background-position: bottom;
   }
@@ -1006,6 +1007,9 @@ nav .menu{
   transition: all 0.3s ease-in-out;
   transform: scale(1.02);
 }
+.kartina-maslom.course-image img{
+  margin-top: -10%;
+}
 
 
 @media screen and (max-width: 1400px){
@@ -1201,8 +1205,8 @@ nav .menu{
     top: 305px;
     width: 90%;
     height: 35%;
-    /*background-color: white;*/
-    background:linear-gradient(to right, #BF953F, #FCF6BA, #B38728);
+    background-color: #E7D0BC;
+    /*background:linear-gradient(to right, #BF953F, #FCF6BA, #B38728);*/
     border: 1px solid grey;
     border-radius: 5px;
   }
@@ -1217,7 +1221,7 @@ nav .menu{
     background-color: lightgrey;
   } 
   .teacher.active .name{
-    background:#FCF6BA;
+    background:#E7D0BC;
     border: 1px solid grey;
   }
   .teacher:not(.active) .name{
@@ -1396,7 +1400,7 @@ nav .menu{
 .transport{
   top: 0;
   left:0;
-  /*background-color: #9d1c20;*/
+  /*background-color: #E7D0BC;*/
   z-index: 1000;
   box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.55);
   /*transition: all 1s ease-in-out 3s;*/
@@ -1405,6 +1409,7 @@ nav .menu{
 .free-lesson{
   top: 0;
   left:100vw;
+  /*background-color: #E7D0BC;*/
   z-index: 1001;
   font-size: 1.7rem;
   font-weight: bold;
@@ -1482,7 +1487,62 @@ nav .menu{
     width: 100%;
   }
   
+  .transport{
+    background-color: #E7D0BC;
+  }
+  .free-lesson{
+    background-color: #E7D0BC;
+  }
+  
 }
+
+
+
+
+/*-----------FLOWERS ANIMATION-----------*/
+.find-us .flowers{
+  position: absolute;
+  top:0;
+  z-index: 555;
+  width: 100%;
+  height: 700px;
+}
+
+.flower.f-1,
+.flower.f-2,
+.flower.f-3,
+.flower.f-4,
+.flower.f-5{
+  background-image: url(../images/flower.png);
+  background-repeat: no-repeat;
+  width: 100px;
+  height: 100px;
+  opacity: 0.3;
+  position: absolute;
+  transform: scale(0.3);
+}
+
+.flower.f-1{
+  top: 100px;
+  left: 100px;
+}
+.flower.f-2{
+  top: 135px;
+  left: 215px;
+}
+.flower.f-3{
+  top: 160px;
+  left: 360px;
+}
+.flower.f-4{
+  top: 350px;
+  left: 350px;
+}
+.flower.f-5{
+  top: 450px;
+  left: 450px;
+}
+
 
 
 
