--- a/css/style.css
+++ b/css/style.css
@@ -839,6 +839,7 @@ nav .menu{
 @media screen and (max-width: 640px) { 
   .main-text{
     overflow: hidden;
+    height: 2755px
   }
 /*  .main-text,
   #canvas-basic{
