--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,20 @@ body {
 h1, h2, h3{
   text-align: center;
 }
+#canvas-basic {
+  background: rgba(211,221,230,1);
+  background: -moz-linear-gradient(top, rgba(211,221,230,1) 0%, rgba(245,226,209,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(211,221,230,1)), color-stop(100%, rgba(245,226,209,1)));
+  background: -webkit-linear-gradient(top, rgba(211,221,230,1) 0%, rgba(245,226,209,1) 100%);
+  background: -o-linear-gradient(top, rgba(211,221,230,1) 0%, rgba(245,226,209,1) 100%);
+  background: -ms-linear-gradient(top, rgba(211,221,230,1) 0%, rgba(245,226,209,1) 100%);
+  background: linear-gradient(to bottom, rgba(211,221,230,1) 0%, rgba(245,226,209,1) 100%);
+}
 .container{
   width:1200px;
   margin:auto;
   margin-top: 30px;
-  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Roboto', sans-serif;
 }
 @media screen and (max-width: 1400px) { 
   .container{
@@ -196,7 +205,7 @@ svg {
 .main-page-btn .btn-text{
   /*display: inline-block;*/
   text-align: center;
-  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: bold;
   line-height: 1rem;
   width:7vw;
@@ -289,7 +298,7 @@ flex: 1 4 10%;
 
 nav .menu{
   position: fixed;
-  font-family: 'Cormorant Garamond', serif;
+  font-family: 'Roboto', sans-serif;
 /*  height: 555px;
   width: 180px;
   border-radius: 30px 0 0 30px;*/
@@ -839,7 +848,7 @@ nav .menu{
 @media screen and (max-width: 640px) { 
   .main-text{
     overflow: hidden;
-    height: 2755px
+    height: 3000px
   }
 /*  .main-text,
   #canvas-basic{
@@ -864,24 +873,24 @@ nav .menu{
   }
   .main-block-1{
     width: 90%;
-    top: 230px;
+    top: 700px;
     left: 0;
     /*line-height: 0.85rem;*/
   }
   .main-block-2{
     width: 90%;
-    top: 850px;
+    top: 1350px;
     right: 0;
   }
   .main-block-3{
     width: 90%;
     padding: 15px;
-    top: 1510px;
+    top: 1986px;
     left: 0;
   }
   .main-block-4{
     width: 90%;
-    top: 2260px;
+    top: 85px;
     right: 0;
     line-height: 1rem;
   }
@@ -891,36 +900,36 @@ nav .menu{
   .main-img-1{
     width: 110%;
     padding: 10px;
-    top: 110px;
+    top: 530px;
     right: -7%;
   }
   .main-img-2{
     width: 85px;
-    top: 720px;
-    right: -5%;
+    top: 1265px;
+    right: -10%;
     z-index: 22;
   }
   .main-img-3{
     width: 85%;
-    top: 650px;
+    top: 1220px;
     right: -5%;
   }
   .main-img-4{
     width: 65%;
-    top: 2100px;
+    top: 2740px;
     right: auto;
-    left: 50%;
+    left: 40%;
   }
   .main-img-5{
     width: 110%;
     padding: 10px;
-    top: 1414px;
+    top: 1910px;
     left: -5%;
   }
   .main-img-6{
-    width: 65%;
-    top: 1990px;
-    right: 40%;
+    width: 45%;
+    top: 2670px;
+    right: 53%;
   }
 
 }
@@ -1084,6 +1093,9 @@ nav .menu{
   .course-card.course-7,
   .course-card.course-6{
     height: 380px;
+  }
+  .courses h1 {
+    font-size: 1.15rem;
   }
   .courses h2{
     font-size: 0.9rem;
@@ -1517,7 +1529,6 @@ a.insta{
 .transport .container{
   margin-top: 5px;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 .free-lesson .container{
@@ -1554,7 +1565,7 @@ a.insta{
     height: 30px;
   }
   .transport .container{
-    margin-top: 3px;
+    margin-top: 2px;
   }
   .transport .metrostation,
   .transport .metro,
@@ -1562,7 +1573,7 @@ a.insta{
   .tralleibus,
   .bus,
   .busbus{
-    font-size: 0.55rem;
+    font-size: 0.5rem;
     margin-left: 2px;
     line-height: 0.9rem;
   }
