--- a/css/style.css
+++ b/css/style.css
@@ -651,7 +651,7 @@ nav .menu{
 .main-text{
   color:rgba(0,0,0,0.87);
   /*padding-bottom: 25px;*/
-  height: 2150px;
+  height: 1770px;
 
   /*fallback*/
   position: relative;
@@ -674,64 +674,64 @@ nav .menu{
 .main-block-1{
   width: 630px;
   padding: 15px;
-  top: 120px;
+  top: 470px;
   left: -40px;
   z-index: 10;
 }
 .main-block-2{
   width: 500px;
   padding: 15px;
-  top: 505px;
+  top: 855px;
   right: 30px;
   z-index: 11;
 }
 .main-block-3{
   width: 700px;
   padding: 15px;
-  top: 810px;
+  top: 1160px;
   left: -150px;
   z-index: 12;
 }
 .main-block-4{
   width: 670px;
   padding: 15px;
-  top: 1450px;
+  top: 140px;
   right: 120px;
 }
 .main-img-1{
   width: 530px;
   padding: 10px;
-  top: 140px;
+  top: 490px;
   right: 10px;
 }
 .main-img-2{
   width: 200px;
   padding: 10px;
-  top: 330px;
+  top: 680px;
   right: 60px;
 }
 .main-img-3{
   width: 300px;
   padding: 10px;
-  top: 530px;
+  top: 880px;
   left: -30px;
 }
 .main-img-4{
   width:300px;
   padding: 7px;
-  top: 655px;
+  top: 1005px;
   left: 305px;
 }
 .main-img-5{
   width: 700px;
   padding: 10px;
-  top: 1248px;
-  right: 5px;
+  top: 1390px;
+  right: -80px;
 }
 .main-img-6{
   width: 220px;
   padding: 10px;
-  top: 1420px;
+  top: 180px;
   left: 100px;
 }
 
@@ -1149,7 +1149,7 @@ nav .menu{
 .teachers{
   display: block;
   /*height: 710px;*/
-  height: 110vh;
+  height: 100vh;
 /*  background: radial-gradient(white, #C9EFF8);
   background-repeat: no-repeat;*/
   /*fallback*/
@@ -1421,33 +1421,71 @@ nav .menu{
   color: #000000;
   /*text-decoration: none;*/
 }
-.find-us .container{
+.find-us .container {
   position: absolute;
   z-index: 1;
   display: block;
   right: calc(50% - 600px);
 }
-.find-us .for-map{
+.find-us .social-networks {
+  margin-top: 20px;
+}
+.find-us .social-networks a {
+  text-decoration: none;
+}
+.find-us .smm-image {
+  display: inline-block;
+  width: 27px;
+  height: 27px;
+  background-image: url('../images/social-networks.png');
+  background-repeat: no-repeat;
+  background-size: 120px;
+}
+.find-us .square {
+  display: inline-flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 5px;
+  padding:5px;
+  margin: 5px;
+  box-shadow:-1px 2px 5px 0px rgba(0,0,0,0.55);
+  color: #5a5a5a;
+  text-decoration: none;
+}
+.smm-image.insta {
+  background-position-x: -3px;
+  background-position-y: -2px;
+}
+.smm-image.vk {
+  background-position-x: -33px;
+  background-position-y: -2px;
+}
+.smm-image.facebook {
+  background-position-x: -63px;
+  background-position-y: -2px;
+}
+.smm-image.ok {
+  background-position-x: -93px;
+  background-position-y: -2px;
+}
+.find-us .for-map {
   position: absolute;
   z-index: 1;
   display: block;
   width: 100%;
   top: 500px;
 }
-.find-us .unp{
+.find-us .unp {
   position:absolute;
   left: calc(50% - 120px);
   bottom: 30px;
   z-index: 22;
 }
-.map-container{
+.map-container {
   border-top: 5px solid white;
 }
-.mob{
+.mob {
   display: none;
-}
-a.insta{
-  color: #5a5a5a;
 }
 
 @media screen and (max-width: 1400px) { 
@@ -1489,10 +1527,6 @@ a.insta{
     display: block;
     font-size: 1.2rem;
     color: #5a5a5a;
-  }
-  .insta{
-    display: inline-block;
-    margin-top: 10px;
   }
 }
 
