--- a/css/style.css
+++ b/css/style.css
@@ -670,6 +670,31 @@ nav .menu{
   margin-bottom:10px;
 }
 
+.instafeed {
+  position: absolute;
+  height: 390px;
+  width: 480px;
+  padding-left: 20px;
+  background-color: white;
+  z-index: 20;
+  top: 300px;
+  left: 100px;
+}
+
+#instafeed img {
+  width: 100%;
+  height: 100%;
+}
+
+.gallery-item {
+  display: inline-block;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+
 /*offset to left for 30px*/
 .main-block-1{
   width: 630px;
@@ -1474,9 +1499,9 @@ nav .menu{
   top: 600px;
 }
 .find-us .unp {
-  position:absolute;
+  position: absolute;
   left: calc(50% - 120px);
-  bottom: 30px;
+  bottom: 40px;
   z-index: 22;
 }
 .map-container {
@@ -1486,12 +1511,27 @@ nav .menu{
   display: none;
 }
 
+.terms {
+  position: absolute;
+  bottom: 15px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  color: grey;
+}
+
+.terms a {
+  text-decoration: none;
+  color: grey;
+  font-size: 12px;
+}
+
 @media screen and (max-width: 1400px) { 
   .find-us .container{
     right: calc(50% - 400px);
   }
   .find-us .unp{
-    bottom: 20px;
+    bottom: 30px;
   }
   .start-animation{
     width: 560px;
@@ -1525,6 +1565,12 @@ nav .menu{
     display: block;
     font-size: 1.2rem;
     color: #5a5a5a;
+  }
+  .find-us .unp {
+    bottom: 110px;
+  }
+  .terms {
+    bottom: 85px;
   }
 }
 
